# aws-serverless-rag

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.example  pyproject.toml  template.yaml
src/embeddings_generator/: embeddings_generator.py  lambda_function.py  requirements.txt
src/orchestrator/: memory.py  orchestrator.py
src/pdf_parser/: pdf_parser.py  requirements.txt
