[project]
name = "aws-serverless-rag"
version = "0.1.0"
description = "AWS serverless RAG applicaiton"
authors = [
    {name = "sergio.rayon.mora@bath.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "boto3 (>=1.40.69,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]
